--- a/src/shared/ui/textAreaButtonUi/text-area-button.module.scss
+++ b/src/shared/ui/textAreaButtonUi/text-area-button.module.scss
@@ -1,3 +1,17 @@
 .button{
-  width: 100px;
+  width: 200px;
+  display: flex;
+  justify-content: center;
+  color: white;
+  background-color: black;
+  border-radius: 50px;
+  &_area{
+    display: flex;
+    justify-content: center;
+  }
+  &:disabled {
+    opacity: 0.5;
+    cursor: not-allowed;
+    pointer-events: none;
+  }
 }
