--- a/src/shared/ui/textAreaUi/text-area.module.scss
+++ b/src/shared/ui/textAreaUi/text-area.module.scss
@@ -1,3 +1,6 @@
-.TextArea{
-  width: 1000px;
+.text_Area{
+  min-width: 500px;
+  min-height: 100px;
+  margin-top: 80px;
+  margin-bottom: 60px;
 }
