refactor: change full architecture moments and remove shit

--- a/src/shared/ui/textUi/text.module.scss
+++ b/src/shared/ui/textUi/text.module.scss
@@ -1,5 +1,10 @@
-.text{
+.text {
   font-size: 48px;
+  display: flex;
+  justify-content: center;
+}
+
+.center {
   display: flex;
   justify-content: center;
 }
